--- a/WebUIBlazor/Shared/NavMenu.razor
+++ b/WebUIBlazor/Shared/NavMenu.razor
@@ -2,5 +2,5 @@
     <MudNavLink Href="/" Match="NavLinkMatch.All">Connection</MudNavLink>
     <MudNavLink Href="/controlpanel" Match="NavLinkMatch.Prefix">Control Panel</MudNavLink>
     <MudNavLink Href="/print" Match="NavLinkMatch.Prefix">Print</MudNavLink>
-    <MudNavLink Href="/about" Match="NavLinkMatch.Prefix">About</MudNavLink>
+    <MudNavLink Href="/printersettings" Match="NavLinkMatch.Prefix">Printer Settings</MudNavLink>
 </MudNavMenu>
