--- a/WebUIBlazor/_Imports.razor
+++ b/WebUIBlazor/_Imports.razor
@@ -7,8 +7,10 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using WebUI
+@using WebUI.Data
 @using WebUI.Shared
 @using Microsoft.AspNetCore.Components
 @using Plotly.Blazor
 @using Plotly.Blazor.Traces
 @using MudBlazor
+@inject PrinterDataServiceTest printer
