--- a/WebUIBlazor/Pages/PrinterSettings.razor
+++ b/WebUIBlazor/Pages/PrinterSettings.razor
@@ -2,40 +2,72 @@
 @using MachineControlHub.Material
 <h3>PrinterSettings</h3>
 
-<MudSelect T="string" Label="Select bed shape" @bind-Value="printer.selectedShape" Variant="Variant.Outlined">
-    <MudSelectItem Value="@("Rectangular")" />
-    <MudSelectItem Value="@("Circular")" />
-    <MudSelectItem Value="@("Custom")" />
-</MudSelect>
 
-<MudNumericField Label="Y Axis in mm" @bind-Value="printer.Printer.Bed.YSize" Immediate="true" Variant="Variant.Outlined" />
-<MudNumericField Label="X Axis in mm" @bind-Value="printer.Printer.Bed.XSize" Immediate="true" Variant="Variant.Outlined" />
-<MudNumericField Label="Z Axis in mm" @bind-Value="printer.Printer.ZMaxBuildVolume" Immediate="true" Variant="Variant.Outlined" />
+<MudCard>
+    <MudCardHeader>
+        <MudText Typo="Typo.h6">Bed Shape</MudText>
+    </MudCardHeader>
+    <MudSelect T="string" Label="Select bed shape" @bind-Value="printer.selectedShape" Variant="Variant.Outlined">
+        <MudSelectItem Value="@("Rectangular")" />
+        <MudSelectItem Value="@("Circular")" />
+        <MudSelectItem Value="@("Custom")" />
+    </MudSelect>
+    <MudCardContent>
+        @if (printer.selectedShape == "Rectangular")
+        {
+            <MudNumericField Label="Y Axis in mm" @bind-Value="printer.Printer.Bed.YSize" Immediate="true" Variant="Variant.Outlined" />
+            <MudNumericField Label="X Axis in mm" @bind-Value="printer.Printer.Bed.XSize" Immediate="true" Variant="Variant.Outlined" />
+        }
+        else if (printer.selectedShape == "Circular")
+        {
+            <MudNumericField Label="Diameter in mm" @bind-Value="printer.Printer.Bed.Diameter" Immediate="true" Variant="Variant.Outlined" />
+        }
+        else if (printer.selectedShape == "Custom")
+        {
+            <MudNumericField Label="Y Axis in mm" @bind-Value="printer.Printer.Bed.YSize" Immediate="true" Variant="Variant.Outlined" />
+            <MudNumericField Label="X Axis in mm" @bind-Value="printer.Printer.Bed.XSize" Immediate="true" Variant="Variant.Outlined" />
+        }
+    </MudCardContent>
+</MudCard>
 
-<MudNumericField @bind-Value="printer.Printer.NumberOfExtruders" Label="Number of Extruders" Variant="Variant.Text" Min="1" Max="10" />
+<MudCard>
+    <MudCardHeader>
+        <MudText Typo="Typo.h6">Set if your machine has multiple extruders</MudText>
+    </MudCardHeader>
+    <MudCardContent>
+        <MudNumericField @bind-Value="printer.Printer.NumberOfExtruders" Label="Number of Extruders" Variant="Variant.Text" Min="1" Max="10" />
+    </MudCardContent>
+</MudCard>
 
-<EditForm Model="printer.Printer.PreheatingProfiles" OnValidSubmit="printer.HandleValidSubmit">
-    <MudTextField @bind-Value="printer.Printer.PreheatingProfiles.MaterialName" Label="Material" Variant="Variant.Outlined" />
-    <MudNumericField @bind-Value="printer.Printer.PreheatingProfiles.HotendTemp" Label="Hotend Temperature" Variant="Variant.Outlined" />
-    <MudNumericField @bind-Value="printer.Printer.PreheatingProfiles.BedTemp" Label="Bed Temperature" Variant="Variant.Outlined" />
-    <MudNumericField @bind-Value="printer.Printer.PreheatingProfiles.FanSpeed" Label="Fan Speed" Variant="Variant.Outlined" />
-    <MudButton Type="submit" OnClick="printer.HandleValidSubmit" Variant="Variant.Filled" Color="Color.Primary">Submit</MudButton>
-</EditForm>
+<MudCard>
+    <MudCardHeader>
+        <MudText Typo="Typo.h6">Preheating Profiles</MudText>
+    </MudCardHeader>
+    <MudCardContent>
+        <EditForm Model="printer.Printer.PreheatingProfiles" OnValidSubmit="printer.HandleValidSubmit">
+            <MudTextField @bind-Value="printer.Printer.PreheatingProfiles.MaterialName" Label="Material" Variant="Variant.Outlined" />
+            <MudNumericField @bind-Value="printer.Printer.PreheatingProfiles.HotendTemp" Label="Hotend Temperature" Variant="Variant.Outlined" />
+            <MudNumericField @bind-Value="printer.Printer.PreheatingProfiles.BedTemp" Label="Bed Temperature" Variant="Variant.Outlined" />
+            <MudNumericField @bind-Value="printer.Printer.PreheatingProfiles.FanSpeed" Label="Fan Speed" Variant="Variant.Outlined" />
+            <MudButton Type="submit" OnClick="printer.HandleValidSubmit" Variant="Variant.Filled" Color="Color.Primary">Add Profile</MudButton>
+        </EditForm>
 
-<MudTable Items="@printer.profiles" Height="350px" Breakpoint="Breakpoint.Sm" Virtualize="true" FixedHeader="true">
-    <HeaderContent>
-        <MudTh>Material</MudTh>
-        <MudTh>Hotend Temperature</MudTh>
-        <MudTh>Bed Temperature</MudTh>
-        <MudTh>Fan Speed</MudTh>
-    </HeaderContent>
-    <RowTemplate>
-        <MudTd DataLabel="Material">@context.MaterialName</MudTd>
-        <MudTd DataLabel="Hotend Temperature">@context.HotendTemp</MudTd>
-        <MudTd DataLabel="Bed Temperature">@context.BedTemp</MudTd>
-        <MudTd DataLabel="Fan Speed">@context.FanSpeed</MudTd>
-    </RowTemplate>
-</MudTable>
+        <MudTable Items="@printer.profiles" Height="350px" Breakpoint="Breakpoint.Sm" Virtualize="true" FixedHeader="true">
+            <HeaderContent>
+                <MudTh>Material</MudTh>
+                <MudTh>Hotend Temperature</MudTh>
+                <MudTh>Bed Temperature</MudTh>
+                <MudTh>Fan Speed</MudTh>
+            </HeaderContent>
+            <RowTemplate>
+                <MudTd DataLabel="Material">@context.MaterialName</MudTd>
+                <MudTd DataLabel="Hotend Temperature">@context.HotendTemp</MudTd>
+                <MudTd DataLabel="Bed Temperature">@context.BedTemp</MudTd>
+                <MudTd DataLabel="Fan Speed">@context.FanSpeed</MudTd>
+            </RowTemplate>
+        </MudTable>
+    </MudCardContent>
+</MudCard>
 
 @code {
 
